--- a/src/pug/components/hero.pug
+++ b/src/pug/components/hero.pug
@@ -14,16 +14,16 @@
         .popap-block-input
           .input-popap.input-popap_name
             p
-              label(for="name") Имя*
+              label(for="name") Ім'я*
             p
               input(type="text" id="name" name="name") 
           .input-popap
             p
-              label.validation(for="phoneValidation") Номер телефона*
+              label.validation(for="phoneValidation") Номер телефону*
             p
               input.phone-validation#phoneValidation(type="tel" name="phone")
             .incorect-number-test.d-none 
-              p *неверный формат ввода данных
+              p *невірний формат вводу данних
       .question
         p
           label(for="question")  Запитання
