--- a/src/pug/ru/components/hero.pug
+++ b/src/pug/ru/components/hero.pug
@@ -36,7 +36,7 @@
         p
           input(type="radio" id="comercial" name="popapRadio")
           label(for="comercial") Коммерческая недвижимость
-      button(type="submit") отправить
+      button.submit-form(type="submit") отправить
 section.hero
   .container
     .row
