--- a/src/sass/components/hero.sass
+++ b/src/sass/components/hero.sass
@@ -26,6 +26,7 @@
       min-height: 120px
       max-height: 150px
   button
+    transition: all .5s ease
     position: relative
     top: 0
     left: 50%
@@ -37,6 +38,9 @@
     transform: translateX(-50%)
     border: none
     cursor: pointer
+    &:hover
+      transform:  translateX(-50%), scale(1.02)
+      box-shadow: 0 5px 5px 2.5px rgba(67,4,4,.2)
 
 .opacity-bg
   display: none
@@ -134,6 +138,7 @@
     &:checked + label
       &::before
         background-color: #9c1a1a
+
 .hero
   position: relative
   margin-bottom: 50px
