--- a/src/sass/components/hero.sass
+++ b/src/sass/components/hero.sass
@@ -73,7 +73,7 @@
 .popap-more-info
   display: none
   position: fixed
-  width: 90%
+  width: 85vw
   height: 90vh
   top: 50%
   left: 50%
@@ -82,8 +82,8 @@
   background-color: #f3ece2
   z-index: 12
   +media(1024)
-    width: 600px
-    height: 565px
+    width: 60vw
+    height: 90vh
     padding: 50px 40px
   // label
   //   margin-bottom: 10px
