--- a/src/pug/components/commercial-plan.pug
+++ b/src/pug/components/commercial-plan.pug
@@ -64,14 +64,14 @@ section.commercial-plan
               .slide
                 img(src="img/residential-plan.jpg" alt="Grand Palace - план житлового поверху")
           
-          .btn.btn-arrow.btn-arrow-prev
-            span 
-              span I черга
-              +svg('arrow')
-          .btn.btn-arrow.btn-arrow-next
-            span 
-              span III черга
-              +svg('arrow')
+          //- .btn.btn-arrow.btn-arrow-prev
+          //-   span 
+          //-     span I черга
+          //-     +svg('arrow')
+          //- .btn.btn-arrow.btn-arrow-next
+          //-   span 
+          //-     span III черга
+          //-     +svg('arrow')
         .plan-nav__info
           .info-wrap
             p.info-sold
