--- a/src/sass/components/construction-progress.sass
+++ b/src/sass/components/construction-progress.sass
@@ -37,15 +37,17 @@
     max-width: 100%
     height: 260px
     margin-bottom: 25px
-    padding-left: 1.5%
-    padding-right: 1.5%
+    padding-left: 5px
+    padding-right: 5px
     transition: .5s ease
     align-self: center
     cursor: pointer
+    transform: translateX(-100%)
     // &:nth-child(n+4)
     //   display: none
     +media(540)
       flex: 0 1 50%
+      transform: translateX(0)
       max-width: 50%
       &:nth-child(n+4)
         display: block
@@ -56,8 +58,8 @@
       height: 100%
       object-fit: cover
       object-position: top
-    &:hover
-      transform: scale(1.1)
+    // &:hover
+    //   transform: scale(1.1)
   .btn-wrap
     text-align: center
   &__btn
