--- a/src/pug/components/contact-section.pug
+++ b/src/pug/components/contact-section.pug
@@ -9,11 +9,12 @@ section.contacts
           .contacts-info__item(itemscope, itemtype='https://schema.org/ContactPoint')
             h2 Телефони
             .phone-list.contacts-info__phones
-              a.phone-link(href='tel:+380671321563', itemprop='telephone')
-                +svg('phone')
-                |(067)&nbsp;132-15-63
-              a.phone-link(href='tel:+380671321563', itemprop='telephone')
-                |(067)&nbsp;132-15-63
+              a.phone-link(href='tel:+380980555500' itemprop='telephone')
+                +svg('phone', 19, 29)
+                |(098)&nbsp;055 55 00
+              //- a.phone-link_contact(href='tel:+380980555500' itemprop='telephone')
+              //-   +svg('phone', 19, 29)
+              //-   |(098)&nbsp;055 55 00
           .contacts-info__item(itemscope, itemtype='https://schema.org/ContactPoint')
             h2 Пошта
             .contacts-info__email
