--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -521,3 +521,13 @@ header .social-icons
 
 .menu-active svg
   display: none
+
+.text-wrap > span > span:last-child
+  display: block
+  +media(855)
+    display: inline
+
+.contacts-info__item .phone-link
+  margin: auto
+  +media(579)
+    margin: 0
