--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -531,3 +531,10 @@ header .social-icons
   margin: auto
   +media(579)
     margin: 0
+
+.phone-link__padding
+  display: flex
+  justify-content: center
+  padding-left: 23px
+  +media(579)
+    justify-content: start
