--- a/src/pug/components/contact-section.pug
+++ b/src/pug/components/contact-section.pug
@@ -12,6 +12,8 @@ section.contacts
               a.phone-link(href='tel:+380980555500' itemprop='telephone')
                 +svg('phone', 19, 29)
                 |(098)&nbsp;055 55 00
+            a.phone-link.phone-link__padding(href='tel:+380980555500' itemprop='telephone')
+              |(098)&nbsp;055 55 00
               //- a.phone-link_contact(href='tel:+380980555500' itemprop='telephone')
               //-   +svg('phone', 19, 29)
               //-   |(098)&nbsp;055 55 00
