--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -38,6 +38,8 @@ header.header(itemscope itemtype="http://schema.org/WPHeader")
         li(itemscope itemtype="http://schema.org/SiteNavigationElement")
           a.menu__link(href= location + "#overview", itemprop='url') Переваги
         li(itemscope itemtype="http://schema.org/SiteNavigationElement")
+          a.menu__link(href='galery.html', itemprop='url') Галерея
+        li(itemscope itemtype="http://schema.org/SiteNavigationElement")
           a.menu__link(href= location + "#progress", itemprop='url') Хід будівництва
         li(itemscope itemtype="http://schema.org/SiteNavigationElement")
           a.menu__link(href= location + "#documentation", itemprop='url') Документація
