--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -174,6 +174,7 @@ figure
 @import components/panorama
 @import components/construction-progress
 @import components/documentation
+@import components/galery
 @import components/comment-main
 @import components/contact-section
 @import components/footer
