--- a/src/sass/components/construction-progress.sass
+++ b/src/sass/components/construction-progress.sass
@@ -1,4 +1,5 @@
-.construction-progress
+.construction-progress,
+.construction-progress-page
   .galery-wrapper
     position: relative
     padding: 25px 10%
@@ -20,19 +21,20 @@
       padding-left: 0
       padding-right: 0
       justify-content: space-between
-
       overflow-x: visible
       &::after, &::before
         content: none
 
   &__title
     margin-bottom: 5px
-  &__galery
+  &__galery,
+  &__galery-block
     flex-wrap: nowrap
     transition: .75s ease
     +media(540)
       flex-wrap: wrap
-  &__img
+  &__img,
+  &__img-galery
     flex: 0 0 100%
     max-width: 100%
     height: 260px
