--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -24,11 +24,11 @@ footer.footer(itemprop='publisher', itemscope, itemtype='http://schema.org/WPFoo
         //-   +svg('phone', 19, 29)
         //-   |(098)&nbsp;055 55 00
         span.social-icons.flex-icons
-          a.wsup(href="#")
-            +svg('wsup', 29, 29) 
-          a.telegram(href="#")
-            +svg('telegram', 34, 29) 
-          a.viber(href="#")
+          //- a.wsup(href="#")
+          //-   +svg('wsup', 29, 29) 
+          //- a.telegram(href="#")
+          //-   +svg('telegram', 34, 29) 
+          a.viber(href="viber://chat?number=%2B380980555500")
             +svg('viber', 27, 29) 
     .copyright
       p &copy; Copyright by &laquo;Grand Palace&raquo; 2012—2021
