--- a/src/pug/ru/components/header.pug
+++ b/src/pug/ru/components/header.pug
@@ -42,7 +42,7 @@ header.header(itemscope itemtype="http://schema.org/WPHeader")
           a.menu__link(href= location + "#overview", itemprop='url') 
             span(itemprop='name') Преимущества
         li(itemscope itemtype="http://schema.org/SiteNavigationElement")
-          a.menu__link(href= location + "#progress", itemprop='url') 
+          a.menu__link(href="galery.html") 
             span(itemprop='name') Галерея
         li(itemscope itemtype="http://schema.org/SiteNavigationElement")
           a.menu__link(href= location + "#progress", itemprop='url') 
