--- a/src/pug/ru/galery.pug
+++ b/src/pug/ru/galery.pug
@@ -24,7 +24,7 @@ html(lang="uk")
 
   body(tabindex="0")
     .body-wrapper
-      include components/vars
+      include ../components/vars
       include components/mixins
       include components/header
 
