--- a/src/sass/components/footer.sass
+++ b/src/sass/components/footer.sass
@@ -27,11 +27,11 @@
 
 .footer__phone
   .phone-link
-    padding: 5px 10px 4px 40px
+    padding: 5px 10px 4px 0
     svg
       left: 10px
     +media(1024)
-      padding: 5px 0 4px 30px
+      padding: 5px 0 4px 0
       svg
         left: 0
   +media(409)
