--- a/src/pug/components/residential-overview.pug
+++ b/src/pug/components/residential-overview.pug
@@ -11,3 +11,36 @@ section.real-estate.residential-overview(itemscope, itemtype='http://schema.org/
           p.short-description__text(itemprop='description') Це місце, де ви зможете жити, працювати, відпочивати, займатися спортом та ходити на шопінг, не полишаючи свого житла.
           p.short-description__text(itemprop='description') Закритий внутрішній двір з розпланованими зонами відпочинку та дитячими майданчиками прийдуться до смаку усім хто цінує затишок, який так необхідний у великому місті.
           p.short-description__text(itemprop='description') Для вашої зручності ми будуємо підземний паркінг.
+section.comercial-galery.container
+  .galery-block
+    .picture-galery 
+      picture 
+        sourse(srcset="img/galery1.jpg" type="image/jpg")
+        img(src="img/galery1.webp", alt="Зручна парковка біля комерційних приміщень")
+    .text-block-galery
+      .number 01
+      p.text-galery Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
+  .galery-block
+    .picture-galery 
+        picture 
+          sourse(srcset="img/galery2.jpg" type="image/jpg")
+          img(src="img/galery2.webp", alt="Особистий паркінг для мешканців ЖК Гранд Палац")
+    .text-block-galery
+      .number 02
+      p.text-galery Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
+  .galery-block
+    .picture-galery 
+        picture 
+          sourse(srcset="img/galery3.jpg" type="image/jpg")
+          img(src="img/galery3.webp", alt="Чудові краєвиди на місто")
+    .text-block-galery
+      .number 03
+      p.text-galery Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
+  .galery-block
+    .picture-galery 
+        picture 
+          sourse(srcset="img/galery4.jpg" type="image/jpg")
+          img(src="img/galery4.webp", alt="Панорамні вікна з красивими краєвидами міста")
+    .text-block-galery
+      .number 04
+      p.text-galery Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
