--- a/src/pug/components/real-estate.pug
+++ b/src/pug/components/real-estate.pug
@@ -14,7 +14,7 @@ section.real-estate
           h2.short-description__title.title
             span.head-line Житлова
             |  нерухомість
-          p.short-description__text Індивідуальне опалення, вільне планування, велика площа освітлення кімнат, швидкісні ліфти "Otis", цілодобова охорона та консьєрж послуги, можливість безпосередньо ліфтами потрапляти в підземний паркінг та в паркову зону на 4 поверсі, користування фітнес центром.
+          p.short-description__text «Сучасний Комфортний Житлово-Торговий Комплекс “Grand Palace”. Це місце, де ви зможете жити, працювати та відпочивати, займатися спортом та ходити на шопінг, не покидаючи власного комплексу. Ергономічні квартири з різноманітними плануваннями – від затишних студій до просторих пентхаусів – задовольнять будь-які ваші потреби. А панорамні краєвиди з вікон квартир відкриють вам мальовничі пейзажі міста. Підземний паркінг, відеоспостереження та швидкі ліфти подбають про вашу безпеку та комфорт. Центральне розташування комплексу робить все необхідне доступним у пішій доступності.»
           a.short-description__btn.btn(href='residential.html') Детальніше
         .images-slider__items.col
           span.images-slider__item.slider-item-1.active
@@ -28,7 +28,7 @@ section.real-estate
           h2.short-description__title.title
             span.head-line Комерційна
             |  нерухомість
-          p.short-description__text Великий вибір приміщень під комерційний бізнес. Вигідне розташування у самому центрі міста. Адаптація площі під будь-який бізнес. Незважаючи на те, чи то стріт-рітейл, кафе, ресторани, фітнес-центр, чи будь-який бізнес сфери послуг і сервісів, ми допоможемо підібрати ідеальне приміщення під бізнес з урахуванням ваших цілей і завдань.
+          p.short-description__text «Відкрийте для себе унікальну можливість розмістити ваш бізнес та інвестиції у центрі Хмельницького в ексклюзивному торговому центрі «Гранд Палас» ! Наша пропозиція не має аналогів у місті та виходить за рамки звичайних пропозицій торгівельних приміщень, пропонуючи місце у професійному торговому центрі, де поряд буде продуктовий супермаркет, кафе, ресторан, зони відпочинку та розваг для дітей та дорослих. Це ідеальний шанс для підприємців, які забезпечать вашому бізнесу, видатне розташування, престиж та високий трафік клієнтів, а вашим інвестиціям довгострокові прибутки. Не пропустіть свій шанс зайняти своє місце в центрі комерційного життя міста!”
           a.short-description__btn.btn(href='commercial.html') Детальніше
         .images-slider__items.col
           span.images-slider__item.slider-item-1
