--- a/src/pug/ru/components/real-estate.pug
+++ b/src/pug/ru/components/real-estate.pug
@@ -14,7 +14,7 @@ section.real-estate
           h2.short-description__title.title
             span.head-line Жилая
             |  недвижимость
-          p.short-description__text Индивидуальное отопление, свободная планировка, большая площадь освещения комнат, скоростные лифты "Otis", круглосуточная охрана и консьерж услуги, возможность напрямую лифтами попадать в подземный паркинг и в парковую зону на 4 этаже, пользование фитнес центром.
+          p.short-description__text «Современный Комфортный Жилищно-Торговый Комплекс Grand Palace. Это место, где вы можете жить, работать и отдыхать, заниматься спортом и ходить на шопинг, не покидая собственного комплекса. Эргономичные квартиры с разнообразными планировками – от уютных студий до просторных пентхаусов – удовлетворят любые ваши потребности. А панорамные виды окон квартир откроют вам живописные пейзажи города. Подземный паркинг, видеонаблюдение и быстрые лифты позаботятся о вашей безопасности и комфорте. Центральное расположение комплекса делает все необходимое доступным в пешей доступности.
           a.short-description__btn.btn(href='residential.html') Подробнее
         .images-slider__items.col
           span.images-slider__item.slider-item-1.active
@@ -28,7 +28,7 @@ section.real-estate
           h2.short-description__title.title
             span.head-line Коммерческая
             |  недвижимость
-          p.short-description__text Большой выбор помещений под коммерческий бизнес. Выгодное расположение в самом центре города. Адаптация площади под любой бизнес. Будь то стрит-ритейл, кафе, рестораны, фитнес-центр, или любой бизнес сферы услуг и сервисов, мы поможем подобрать идеальное помещение под бизнес с учетом ваших целей и задач.
+          p.short-description__text «Откройте для себя уникальную возможность разместить ваш бизнес и инвестиции в центре Хмельницкого в эксклюзивном торговом центре «Гранд Палас»! Наше предложение не имеет аналогов в городе и выходит за рамки обычных предложений торговых помещений, предлагая место в профессиональном торговом центре, где рядом будет продуктовый супермаркет, кафе, ресторан, зоны отдыха и развлечений для детей и взрослых. Это идеальный шанс для предпринимателей, которые обеспечат вашему бизнесу, отличное расположение, престиж и высокий трафик клиентов, а вашим инвестициям долгосрочные доходы. Не упустите свой шанс занять свое место в центре коммерческой жизни города!”
           a.short-description__btn.btn(href='commercial.html') Подробнее
         .images-slider__items.col
           span.images-slider__item.slider-item-1
