--- a/src/pug/ru/residential.pug
+++ b/src/pug/ru/residential.pug
@@ -6,7 +6,7 @@ html(lang="ru")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0")
     link(rel="stylesheet" href="../css/styles.css")
     title Grand Palace - жилая недвижимость в городе Хмельницкий
-    meta(name="description" content="Житловий комплекс Grand Palace надасть вам можливість жити, працювати, відпочивати, займатись спортом та іншими повсякденними речами не покидаючи свого житла!")
+    meta(name="description" content="Жилой комплекс Grand Palace предоставит вам возможность жить, работать, отдыхать, заниматься спортом и другими повседневными вещами, не покидая своего жилья!")
     meta(name="keywords" content="купить квартиру в ЖК Grand Palace, Жилая недвижимость в элитном жилом комплексе Гранд дворец, купить квартиру в Гранд Дворце")
     meta(name="author" content="Grand Palace")
     meta(name="publisher" content="Grand Palace")
