--- a/src/pug/ru/news.pug
+++ b/src/pug/ru/news.pug
@@ -5,9 +5,9 @@ html(lang="uk")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0")
     link(rel="stylesheet" href="../css/styles.css")
-    title Grand Palace - Новини елітного житлового комплексу
-    meta(name="description" content="Слідкуйте за оновленнями, щоб бути в курсі усіх подій та новин від компанії Гранд Палац! Лише актуальна та свіжа інформація від забудовника.")
-    meta(name="keywords" content="Новини Grand Palace, актуальна інформація по Гранд Палац, список новин та подій Grand Palace")
+    title Grand Palace - Новости элитного жилого комплекса
+    meta(name="description" content="Следите за обновлениями, чтобы быть в курсе всех событий и новостей от компании Гранд Палас! Только актуальная и свежая информация от застройщика.")
+    meta(name="keywords" content="Новости Grand Palace, актуальная информация по Гранд Палас, список новостей и событий Grand Palace")
     meta(name="author" content="Grand Palace")
     meta(name="publisher" content="Grand Palace")
     meta(name="robots" content="index follow")  
@@ -16,11 +16,13 @@ html(lang="uk")
     link(href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500&display=swap' rel='stylesheet')
     link(rel='icon' href='img/favicon.ico')
     link(rel='canonical' href='https://www.grandpalace.km.ua/news.html')
-    meta(property="og:title" content="Grand Palace - Новини елітного житлового комплексу")
-    meta(property="og:description" content="Слідкуйте за оновленнями, щоб бути в курсі усіх актуальних подій та новин від компанії Гранд Палац! Лише актуальна та свіжа інформація від забудовника.")
+    meta(property="og:title" content="Grand Palace - Новости элитного жилого комплекса")
+    meta(property="og:description" content="Следите за обновлениями, чтобы быть в курсе всех актуальных событий и новостей от компании Гранд Палас! Только актуальная и свежая информация от застройщика.")
     meta(property="og:image" content="img/logo.jpg")
     meta(property="og:type" content="website")
     meta(property="og:url" content="https://www.grandpalace.km.ua/news.html")
+
+
 
   body(tabindex="0")
     .body-wrapper
