--- a/src/pug/ru/one-news.pug
+++ b/src/pug/ru/one-news.pug
@@ -5,22 +5,23 @@ html(lang="uk")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0")
     link(rel="stylesheet" href="../css/styles.css")
-    title Grand Palace - старт продажу нової черги
-    meta(name="description" content="")
-    meta(name="keywords" content="")
+    title Grand Palace - запуск продажи новой очереди
+    meta(name="description" content="Новости Grand Palace, страница где вы сможете узнать новейшую информацию о нашем ТРЦ и компании.")
+    meta(name="keywords" content="Новости Grand Palace, Актуальная информация по Гранд Палацу, список новостей и событий Grand Palace.")
     meta(name="author" content="Grand Palace")
     meta(name="publisher" content="Grand Palace")
-    meta(name="robots" content="index follow")  
+    meta(name="robots" content="index follow")
     link(rel='preconnect' href='https://fonts.googleapis.com')
     link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
     link(href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500&display=swap' rel='stylesheet')
     link(rel='icon' href='img/favicon.ico')
     link(rel='canonical' href='https://www.grandpalace.km.ua/one-news.html')
-    meta(property="og:title" content="Grand Palace - старт продажу нової черги")
-    meta(property="og:description" content="")
+    meta(property="og:title" content="Grand Palace - запуск продажи новой очереди")
+    meta(property="og:description" content="Новости Grand Palace, страница где вы сможете узнать новейшую информацию о нашем ТРЦ и компании.")
     meta(property="og:image" content="img/logo.jpg")
     meta(property="og:type" content="website")
     meta(property="og:url" content="https://www.grandpalace.km.ua/one-news.html")
+
 
   body(tabindex="0")
     .body-wrapper
