--- a/src/pug/ru/galery.pug
+++ b/src/pug/ru/galery.pug
@@ -4,7 +4,7 @@ html(lang="uk")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0")
-    link(rel="stylesheet" href="css/styles.css")
+    link(rel="stylesheet" href="../css/styles.css")
     title Grand Palace - старт продажу нової черги
     meta(name="description" content="")
     meta(name="keywords" content="")
@@ -33,18 +33,18 @@ html(lang="uk")
             h1.documentation__title.title.title--one-word
                 span.head-line Галерея
         .button-block
-            a.galery-description__btn.btn(href="№") Фото
-            a.galery-description__btn.btn(href="№") Видео
+            button.galery-description__btn.btn(href="№") Фото
+            button.galery-description__btn.btn(href="№") Видео
         .construction-progress-page
             .construction-progress__galery-block.row
                 .construction-progress__img-galery
-                  img(src="img/construction-progress1.jpeg" alt="Grand Palace - хід будівництва")
+                  img(src="../img/construction-progress1.jpeg" alt="Grand Palace - хід будівництва")
                 .construction-progress__img-galery
-                  img(src="img/construction-progress2.jpeg" alt="Grand Palace - хід будівництва")
+                  img(src="../img/construction-progress2.jpeg" alt="Grand Palace - хід будівництва")
                 .construction-progress__img-galery
-                  img(src="img/construction-progress3.jpeg" alt="Grand Palace - хід будівництва")
+                  img(src="../img/construction-progress3.jpeg" alt="Grand Palace - хід будівництва")
                 .construction-progress__img-galery
-                  img(src="img/construction-progress4.jpeg" alt="Grand Palace - хід будівництва")
+                  img(src="../img/construction-progress4.jpeg" alt="Grand Palace - хід будівництва")
 
     script(src="js/scripts.js")
     include components/footer
