--- a/src/sass/components/galery.sass
+++ b/src/sass/components/galery.sass
@@ -7,6 +7,8 @@
 .button-block
     display: flex
     margin-bottom: 50px
+    button
+        border: none
 
 .galery-description__btn
     padding: 10px 30px
