--- a/src/pug/galery.pug
+++ b/src/pug/galery.pug
@@ -33,8 +33,8 @@ html(lang="uk")
             h1.documentation__title.title.title--one-word
                 span.head-line Галерея
         .button-block
-            a.galery-description__btn.btn(href="№") Фото
-            a.galery-description__btn.btn(href="№") Відео
+            button.galery-description__btn.btn(href="№") Фото
+            button.galery-description__btn.btn(href="№") Відео
         .construction-progress-page
             .construction-progress__galery-block.row
                 .construction-progress__img-galery
