--- a/src/sass/components/comment-main.sass
+++ b/src/sass/components/comment-main.sass
@@ -9,11 +9,9 @@
 .comment-block
     transition: all 2s ease
     width: 100%
-    padding: 300px 0 0
+    padding: 250px 0 10px
     font-family: "Roboto"
     box-sizing: border-box
-    +media(768)
-        padding: 250px 0 50px
 
 .carousel
     position: relative
@@ -47,13 +45,13 @@
     position: absolute
     top: 0
     width: 100%
+    min-height: 210px
     padding: 25px 
     background-color: #faf7f3
     border: 1px solid #333
     box-sizing: border-box
     +media(1024)
         width: 42vw
-
 
 .img-circle
     width: 76px
