--- a/src/sass/components/construction-progress.sass
+++ b/src/sass/components/construction-progress.sass
@@ -1,5 +1,4 @@
-.construction-progress,
-.construction-progress-page
+.construction-progress
   .galery-wrapper
     position: relative
     padding: 25px 10%
@@ -27,14 +26,12 @@
 
   &__title
     margin-bottom: 5px
-  &__galery,
-  &__galery-block
+  &__galery
     flex-wrap: nowrap
     transition: .75s ease
     +media(540)
       flex-wrap: wrap
-  &__img,
-  &__img-galery
+  &__img
     flex: 0 0 100%
     max-width: 100%
     height: 260px
