--- a/src/sass/components/galery.sass
+++ b/src/sass/components/galery.sass
@@ -15,3 +15,40 @@
 
 .construction-progress-page
     margin-bottom: 100px
+
+.construction-progress_galery-block
+    display: grid
+    column-gap: 20px
+    row-gap: 20px
+    grid-template-columns: repeat(2, minmax(0, 1fr))
+    +media(768)
+        grid-template-columns: repeat(3, minmax(0, 1fr))
+    +media(1024)
+        grid-template-columns: repeat(4, minmax(0, 1fr))
+
+.construction-progress_img-galery
+    img
+        width: 100%
+        height: 100%
+        object-fit: cover
+
+.construction-progress_galery-video
+    display: none
+    width: 100%
+    column-gap: 20px
+    row-gap: 20px
+    margin-bottom: 80px
+    grid-template-columns: repeat(1, minmax(0, 1fr))
+    +media(1024)
+        grid-template-columns: repeat(2, minmax(0, 1fr))
+
+.construction-video-galery
+    width: 100%
+    min-width: 90vw
+    height: 400px
+    +media(1024)
+        min-width: 43vw
+    iframe
+        width: 100%
+        height: 100%
+        object-fit: cover
