--- a/src/pug/galery.pug
+++ b/src/pug/galery.pug
@@ -33,20 +33,21 @@ html(lang="uk")
             h1.documentation__title.title.title--one-word
                 span.head-line Галерея
         .button-block
-            button.galery-description__btn.btn.photo(href="№") Фото
-            button.galery-description__btn.btn.video(href="№") Відео
-        .construction-progress-page
-            .construction-progress_galery-block
+            button#photoToggle.galery-description__btn.btn.photo(href="№") Фото
+            button#videoToggle.galery-description__btn.btn.video(href="№") Відео
+        .construction-progress-page#galleryPhotos
+            .construction-progress_galery
                 .construction-progress_img-galery
-                  img(src="img/construction-progress1.jpeg" alt="Grand Palace - хід будівництва")
+                  img.w-full.h-full.object-contain.object-top(src="img/construction-progress1.jpeg" alt="Grand Palace - хід будівництва")
                 .construction-progress_img-galery
-                  img(src="img/construction-progress2.jpeg" alt="Grand Palace - хід будівництва")
+                  img.w-full.h-full.object-contain.object-top(src="img/construction-progress2.jpeg" alt="Grand Palace - хід будівництва")
                 .construction-progress_img-galery
-                  img(src="img/construction-progress3.jpeg" alt="Grand Palace - хід будівництва")
+                  img.w-full.h-full.object-contain.object-top(src="img/construction-progress3.jpeg" alt="Grand Palace - хід будівництва")
                 .construction-progress_img-galery
-                  img(src="img/construction-progress4.jpeg" alt="Grand Palace - хід будівництва")
-        .construction-progress-page-video
-            .construction-progress_galery-video
+                  img.w-full.h-full.object-contain.object-top(src="img/construction-progress4.jpeg" alt="Grand Palace - хід будівництва")
+            //- h2.construction-progress_no-galery Немає фото
+        .construction-progress-page#galleryVideos
+            .construction-progress_galery
                 .construction-video-galery
                   <iframe src="https://www.youtube.com/embed/p2O6FOKwDrU?si=q2wJ7_sWt_HOc8uA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 .construction-video-galery
@@ -55,6 +56,7 @@ html(lang="uk")
                   <iframe src="https://www.youtube.com/embed/p2O6FOKwDrU?si=q2wJ7_sWt_HOc8uA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 .construction-video-galery
                   <iframe src="https://www.youtube.com/embed/p2O6FOKwDrU?si=q2wJ7_sWt_HOc8uA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            //- h2.construction-progress_no-galery Немає відео
 
     script(src="js/scripts.js")
     include components/footer
