--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -122,9 +122,9 @@ figure
       width: 110%
       height: 1px
       background-color: $maincolor
-  &--one-word
-    // &::after
-    //   width: 110%
+  // &--one-word
+  //   // &::after
+  //   //   width: 110%
     .head-line
       &::after
         width: 50%
