--- a/src/sass/components/galery.sass
+++ b/src/sass/components/galery.sass
@@ -1,8 +1,10 @@
 #galleryVideos
     display: none
+
 .container-galery
     padding-top: 80px
     width: 100% !important
+    min-height: 120vh
 
 .galety-header
     text-align: center
@@ -17,7 +19,7 @@
     padding: 10px 30px
 
 .construction-progress-page
-    margin-bottom: 230px
+    margin-bottom: 50px
 
 .construction-progress_galery
     display: grid
